# superset-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/superset_ai/: __init__.py
src/superset_ai/agent/: graph.py  prompts.py  state.py  tools.py
src/superset_ai/api/: __init__.py  auth.py  charts.py  client.py  dashboards.py  databases.py  datasets.py
src/superset_ai/cli/: __init__.py  main.py
src/superset_ai/core/: config.py  copilot_auth.py  exceptions.py
src/superset_ai/mcp/: __init__.py  server.py
src/superset_ai/operations/: __init__.py  charts.py  dashboards.py  datasets.py  discovery.py
src/superset_ai/schemas/: charts.py  common.py  dashboards.py  datasets.py
src/supersetai/: __init__.py
src/supersetai/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py
src/supersetai/api/: auth.py  charts.py  client.py  dashboards.py  databases.py  datasets.py
src/supersetai/cli/: main.py
src/supersetai/core/: config.py  copilot_auth.py  exceptions.py
src/supersetai/mcp/: __init__.py  server.py
src/supersetai/schemas/: __init__.py  charts.py  dashboards.py  datasets.py
tests/: __init__.py  conftest.py  test_agent_tools.py  test_api_charts.py  test_api_dashboards.py  test_api_databases.py  test_api_datasets.py  test_auth.py  test_charts.py  test_client.py  test_config.py  test_dashboards.py  test_mcp_server.py  test_operations.py
